Changes for 0.3.2:

* Now setting CMAKE_BUILD_TYPE to Release by default if not specified (linux only).
* Moved third party libraries to /lib folder.
* Using 'c++ best practices' file structure (/include /src /lib /test)

Changes for 0.3.1:

* Fixed issue #1 - Use GOOGLETEST_HOME environment variable.

Changes for 0.3.0:

* New microseconds and milliseconds timers.
* Moved all methods of class gTestHelper to ra::gtesthelp namespace.
* New filesystem apis: normalizePath(), findFiles(), createFolder(), deleteFolder(), deleteFile(), hasReadAccess() and hasWriteAccess()

Changes for 0.2.0:

* Moved all source code under `ra` namespace (for Rapid Assist)
* Removed all `func` from namepaces and `#ifdef` statements.
* Source code in nativefunc is now under time namespace.
* Removed duplicated code from gtesthelper class. Code moved to random and strings namespaces.
* Added new classes to the library: random

Changes for 0.1.0:

* First public release.